Profile urban fabric : change noise to irregularityCoeff - simplyfy requests and work on perf